# serverless-scaleway-functions

./: .eslintignore  .eslintrc.js  .gitignore  .npmignore  CHANGELOG.md  README.md  eslint.config.mjs  index.js  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml  tests.yml
deploy/: scalewayDeploy.js
deploy/lib/: buildAndPushContainers.js  constants.js  createContainers.js  createFunctions.js  createNamespace.js  deployContainers.js  deployFunctions.js  deployTriggers.js  domins.js  pushContainers.js  uploadCode.js
docs/: README.md  containers.md  custom-domains.md  development.md  es-modules.md  events.md  golang.md  javascript.md  php.md  python.md  rust.md  secrets.md  templates.md  tests.md  troubleshooting.md
examples/: README.md
examples/container/: package.json  serverless.yml
examples/container-schedule/: package-lock.json  package.json  serverless.yml
examples/go/: README.md  go.mod  go.sum  handler.go  (+3 more)
examples/rust/: Cargo.toml  README.md  package.json  serverless.yml
examples/rust/src/: handler.rs
info/: scalewayInfo.js
invoke/: scalewayInvoke.js
jwt/: scalewayJwt.js
logs/: scalewayLogs.js
provider/: scalewayProvider.js
remove/: scalewayRemove.js
shared/: child-process.js  constants.js  domains.js  namespace.js  runtimes.js  secrets.js  setUpDeployment.js  singleSource.js  validate.js  write-service-outputs.js
tests/: setup-tests.js  teardown.js
(+104 files in other folders)
